--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
   </head>
   <body>
     <header class="header">
@@ -26,11 +27,11 @@
       <div class="home-content">
         <h3>Hello, It's me</h3>
         <h1>Prabhat Ranjan</h1>
-        <h3>And I'm a<span class="text"></span></h3>
+        <h3>And I'm a <span class="text"></span></h3>
         <p>
           I'm web Developer with extensive knowledge,<br />
-          experties is to create and website design, Fontend design, and Backend
-          Integration
+          experties is in to create and website design, Frontend design, and
+          Backend Integration
         </p>
         <div class="home-sci">
           <a href="#"><i class="bx bxl-github"></i></a>
